--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -16,6 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Api.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
