--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\IServices\IServices.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
