--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "SqlServerConnection": "Data Source=127.0.0.1;Initial Catalog=Test;User ID=root;Password=123456;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
