--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -28,6 +28,9 @@
     <None Update="Model.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="rbac_model.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
