--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Casbin.NET" Version="1.11.0" />
+    <PackageReference Include="Casbin.NET.Adapter.EFCore" Version="1.7.1" />
     <PackageReference Include="log4net" Version="2.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.18" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.18" />
   </ItemGroup>
