--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "SqlServerConnection": "Data Source=127.0.0.1;Initial Catalog=Test;User ID=root;Password=123456;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;",
+  "SqlServerConnection": "Data Source=127.0.0.1;Initial Catalog=Test;User ID=sa;Password=123456;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,5 +7,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWTToken": {
+    "iss": "JPAPI",
+    "aud": "JPWEB",
+    "sign": "1234odasndsoiuiwqen"
+  },
+  "Audience": {
+    "Issuer": "skyloong",
+    "Audience":  "skyloong"
+  }
 }
