--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "SqlServerConnection": "Data Source=127.0.0.1;Initial Catalog=Test;User ID=sa;Password=123456;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False",
+  "SqlServerConnection": "Data Source=127.0.0.1;Initial Catalog=Test;User ID=sa;Password=123456;Trusted_Connection=false;",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -15,6 +15,6 @@
   },
   "Audience": {
     "Issuer": "skyloong",
-    "Audience":  "skyloong"
+    "Audience": "skyloong"
   }
 }
