--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -10,11 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="ExcelMapper\Export\" />
     <Folder Include="Request\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="SqlSugarCore" Version="5.0.3.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
