修改配置文件路径

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Log4net.config">
+    <Content Update="config\Log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -28,7 +28,7 @@
     <None Update="Model.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="rbac_model.conf">
+    <None Update="config\rbac_model.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
